--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -34,6 +34,4 @@ jobs:
         git config --local user.name "GitHub Action"
         git add archive/*.json latest.json
         git commit -m "Add daily news data: $(date +%Y-%m-%d)" || echo "No changes to commit"
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
